--- a/source/assets/stylesheets/app.css.scss
+++ b/source/assets/stylesheets/app.css.scss
@@ -11,3 +11,26 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+body {
+  background-image: url("../images/dust_scratches.png");
+}
+h1 {
+  font-size: 3.5rem;
+}
+a {
+  text-decoration: none !important;
+}
+@media(max-width: 992px) {
+  .avatar-large-square {
+    display: none;
+  }
+ .hero-container {
+    width: auto;
+  }
+}
+@media(max-width: 576px) {
+  h1 {
+    font-size: 2.6rem;
+  }
+}
