--- a/source/assets/stylesheets/components/_avatar.scss
+++ b/source/assets/stylesheets/components/_avatar.scss
@@ -18,3 +18,8 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+.avatar-large-square{
+  width: 364px;
+  border-radius: 10px;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.404);
+}
