--- a/source/assets/stylesheets/config/_colors.scss
+++ b/source/assets/stylesheets/config/_colors.scss
@@ -1,8 +1,8 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #167FFB;
+$red: #e76161;
+$blue: #74E1E4;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
