--- a/source/assets/stylesheets/config/_fonts.scss
+++ b/source/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,14 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lalezar&display=swap');
+//font-family: 'Lalezar', cursive;
+@import url('https://fonts.googleapis.com/css2?family=Arimo&family=Cabin&display=swap');
+//font-family: 'Arimo', sans-serif;
+//font-family: 'Cabin', sans-serif;
 
 // Define fonts for body and headers
-$body-font: "Work Sans", "Helvetica", "sans-serif";
-$headers-font: "Nunito", "Helvetica", "sans-serif";
+$body-font: "Cabin", "Helvetica", "sans-serif";
+$headers-font: "Lalezar", "Helvetica", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
