--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,10 @@
-<div class="container mt-3">
-  <div class="row justify-content-center">
-    <div class="col">
-      <h1>Middleman Boilerplate</h1>
-    </div>
-  </div>
+<div class="container ">
+  <!-- Hero -->
+  <%= partial 'partials/hero' %>
+  <!-- About -->
+  <%= partial 'partials/about' %>
+  <!-- Projects -->
+  <%#= partial 'partials/projects' %>
+  <!-- Contact -->
+  <%#= partial 'partials/contact' %>
 </div>
