--- a/source/assets/stylesheets/app.css.scss
+++ b/source/assets/stylesheets/app.css.scss
@@ -12,6 +12,10 @@
 @import "components/index";
 @import "pages/index";
 
+html {
+   scroll-behavior: smooth;
+}
+
 body {
   background-image: url("../images/dust_scratches.png");
 }
@@ -32,5 +36,8 @@ a {
 @media(max-width: 575px) {
   h1 {
     font-size: 2.6rem;
+  }
+  #about h1 {
+    font-size: 2.4rem;
   }
 }
