--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@
   <!-- About -->
   <%= partial 'partials/about' %>
   <!-- Projects -->
-  <%#= partial 'partials/projects' %>
+  <%= partial 'partials/projects' %>
   <!-- Contact -->
-  <%#= partial 'partials/contact' %>
+  <%= partial 'partials/contact' %>
 </div>
