--- a/source/assets/stylesheets/config/_colors.scss
+++ b/source/assets/stylesheets/config/_colors.scss
@@ -3,8 +3,9 @@
 // For example:
 $red: #e76161;
 $blue: #74E1E4;
-$yellow: #FFC65A;
-$orange: #E67E22;
+$yellow: #eded90;
+$orange: #edbf90;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$purple: #9090ed
