--- a/source/partials/contact.html.erb
+++ b/source/partials/contact.html.erb
@@ -1,4 +1,4 @@
-<div id="contact" class="container">
+<div id="contact" class="contact-container">
   <div class="d-flex flex-column align-items-center my-3">
     <div class="row d-flex justify-content-center">
       <h1 class="col-10 col-sm-12">Care to chat?</h1>
