--- a/source/partials/hero.html.erb
+++ b/source/partials/hero.html.erb
@@ -9,13 +9,13 @@
     </div>
   </div>
   <div class="hero-links row d-flex justify-content-center mt-3">
-    <div class="hero-link d-flex justify-content-center align-items-center m-2 col-5 col-sm-3">
+    <div class="hero-link d-flex justify-content-center align-items-center m-2 col-8 col-sm-3 col-md-2">
       <%= link_to "About", "#about", class: 'btn-slide' %>
     </div>
-    <div class="hero-link d-flex justify-content-center align-items-center m-2 col-5 col-sm-3">
+    <div class="hero-link d-flex justify-content-center align-items-center m-2 col-8 col-sm-3 col-md-2">
       <%= link_to "Projects", "#projects", class: 'btn-slide' %>
     </div>
-    <div class="hero-link d-flex justify-content-center align-items-center m-2 col-5 col-sm-3">
+    <div class="hero-link d-flex justify-content-center align-items-center m-2 col-8 col-sm-3 col-md-2">
       <%= link_to "Contact", "#contact", class: 'btn-slide' %>
     </div>
   </div>
