--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -4,7 +4,7 @@
       <h1 class="col-12">A little about me...</h1>
     </div>
     <div class="row d-flex justify-content-center">
-      <p class="col-10 col-sm-6 col-md-5 col-lg-3">I am a full stack web developer who enjoys putting logic and creativity together. Those are two of my favorite traits and web dev allows me to use them both. I am particulary fond of squashing any bugs I come across (although hopefully there aren't many 😅.)</p>
+      <p class="col-10 col-sm-6 col-md-5 col-lg-3">I am a full stack web developer who enjoys putting logic and creativity together. Those are two of my favorite traits and web dev allows me to use them both. I am particulary fond of squashing any bugs I come across (although hopefully there aren't many 😅).</p>
       <p class="col-10 col-sm-6 col-md-5 col-lg-3">In America, I led a team of operations associates. While in Japan, I was a lead teacher for three and a half years. For a few months, I studied game dev (Unity and C#) and web dev on my own. After that, I decided to enroll in Le Wagon's full stack web dev course.</p>
       <p class="col-10 col-sm-6 col-md-5 col-lg-3">I try to spend a lot of time practicing coding but outside of that, some of my passions include: running, gaming, studying Japanese, being an amateur musician, and brewing the perfect cup of coffee. </p>
     </div>
