--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -3,8 +3,32 @@
     <div class="row d-flex justify-content-center">
       <h1 class="col-10 col-sm-12">What I've been up to...</h1>
     </div>
-    <div class="row d-flex justify-content-center">
-      <p class="col-8">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate nihil quae doloribus laboriosam quasi aspernatur excepturi omnis obcaecati atque ut, quisquam incidunt maiores sapiente eius eligendi velit quia, dolorum error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate nihil quae doloribus laboriosam quasi aspernatur excepturi omnis obcaecati atque ut, quisquam incidunt maiores sapiente eius eligendi velit quia, dolorum error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate nihil quae doloribus laboriosam quasi aspernatur excepturi omnis obcaecati atque ut, quisquam incidunt maiores sapiente eius eligendi velit quia, dolorum error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate nihil quae doloribus laboriosam quasi aspernatur excepturi omnis obcaecati atque ut, quisquam incidunt maiores sapiente eius eligendi velit quia, dolorum error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate nihil quae doloribus laboriosam quasi aspernatur excepturi omnis obcaecati atque ut, quisquam incidunt maiores sapiente eius eligendi velit quia, dolorum error!</p>
+    <div class="tabs">
+      <input type="radio" id="tab1" name="tabs" checked="checked">
+      <label for="tab1">SK8IT</label>
+      <div class="tab">
+        <div class="row d-flex justify-content-around">
+          <div class="col-4">
+            <%= image_tag "sk8it-demo.gif", class: "sk8it" %>
+          </div>
+          <div class="col-6">
+            <h2>SK8IT</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis suscipit animi a facere voluptatum tempore error nobis quidem laudantium odit consequuntur itaque, magnam accusamus earum sint explicabo dolor placeat ullam? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi dolores facilis autem illum velit quis accusamus atque ab dolorum, quas porro magnam maxime architecto aut mollitia facere assumenda aliquid? Et!</p>
+          </div>
+        </div>
+      </div>
+      <input type="radio" id="tab2" name="tabs">
+      <label for="tab2">AirSocks</label>
+      <div class="tab">
+        <h2>AirSocks</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime quaerat voluptate, aperiam laudantium cum est repudiandae sapiente voluptatum iste in tempora earum temporibus ab cumque, incidunt quisquam, aut vitae nobis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos consectetur vel, ipsa beatae sapiente ullam perspiciatis sint? Molestias, deleniti est! Nesciunt modi aliquam quisquam aperiam iste at voluptate eligendi atque!</p>
+      </div>
+      <input type="radio" id="tab3" name="tabs">
+      <label for="tab3">SunStrife</label>
+      <div class="tab">
+        <h2>SunStrife</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime quaerat voluptate, aperiam laudantium cum est repudiandae sapiente voluptatum iste in tempora earum temporibus ab cumque, incidunt quisquam, aut vitae nobis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos consectetur vel, ipsa beatae sapiente ullam perspiciatis sint? Molestias, deleniti est! Nesciunt modi aliquam quisquam aperiam iste at voluptate eligendi atque!</p>
+      </div>
     </div>
   </div>
 </div>
