--- a/source/assets/stylesheets/components/_small_img.scss
+++ b/source/assets/stylesheets/components/_small_img.scss
@@ -1,6 +1,8 @@
 .sk8it {
   max-height: 595px;
   max-width: 260px;
-  display: block;
-  width: auto;
+}
+.airsocks {
+  max-height: 285px;
+  max-width: 500px;
 }
