--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -12,23 +12,32 @@
             <%= image_tag "sk8it-demo.gif", class: "sk8it" %>
           </div>
           <div class="col-6">
-            <h2>SK8IT</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis suscipit animi a facere voluptatum tempore error nobis quidem laudantium odit consequuntur itaque, magnam accusamus earum sint explicabo dolor placeat ullam? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi dolores facilis autem illum velit quis accusamus atque ab dolorum, quas porro magnam maxime architecto aut mollitia facere assumenda aliquid? Et!</p>
+            <h2>SK8IT - Project Manager</h2>
+            <p>A project my team and I build in two weeks. Skaters can search for new skate shops, skate parks, or other skate spots that others have found and uploaded. There is also a community aspect where skaters can upload videos so others can watch, comment on, and upvote.</p>
+            <p><strong>Notable features:</strong> When uploading a location, the app will generate the address based off of the uploaded photo's geolocational meta-data. When skaters are near the spot, the app will prompt the skater to "check in" to the spot so that other skaters can see who is at the spot.</p>
           </div>
         </div>
       </div>
       <input type="radio" id="tab2" name="tabs">
       <label for="tab2">AirSocks</label>
       <div class="tab">
-        <h2>AirSocks</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime quaerat voluptate, aperiam laudantium cum est repudiandae sapiente voluptatum iste in tempora earum temporibus ab cumque, incidunt quisquam, aut vitae nobis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos consectetur vel, ipsa beatae sapiente ullam perspiciatis sint? Molestias, deleniti est! Nesciunt modi aliquam quisquam aperiam iste at voluptate eligendi atque!</p>
+        <div class="row d-flex justify-content-around">
+          <div class="col-6">
+            <%= image_tag "airsocks-demo.gif", class: "airsocks" %>
+          </div>
+          <div class="col-5">
+            <h2>AirSocks - Lead Dev</h2>
+            <p>A humorous week-long project sprint meant to be a light take on a marketplace-like web app. User can rent or rent out socks from others. The owners of the sock(s) can then accept or reject pending bookings.</p>
+            <p><strong>Challenges faced:</strong> I was in charge of most of the design for this project. One thing I learned was how it important it is to design with responsiveness in mind. After deploying the app, I realized the layout needed a rehaul. Lesson learned.. I had made it my goal to study much more about responsiveness after that.</p>
+          </div>
+        </div>
       </div>
-      <input type="radio" id="tab3" name="tabs">
+      <%# <input type="radio" id="tab3" name="tabs">
       <label for="tab3">SunStrife</label>
       <div class="tab">
         <h2>SunStrife</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime quaerat voluptate, aperiam laudantium cum est repudiandae sapiente voluptatum iste in tempora earum temporibus ab cumque, incidunt quisquam, aut vitae nobis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos consectetur vel, ipsa beatae sapiente ullam perspiciatis sint? Molestias, deleniti est! Nesciunt modi aliquam quisquam aperiam iste at voluptate eligendi atque!</p>
-      </div>
+      </div> %>
     </div>
   </div>
 </div>
