--- a/source/assets/stylesheets/config/_colors.scss
+++ b/source/assets/stylesheets/config/_colors.scss
@@ -2,10 +2,10 @@
 
 // For example:
 $red: #e76161;
-$blue: #74E1E4;
+$blue: #90eded;
 $yellow: #eded90;
 $orange: #edbf90;
-$green: #1EDD88;
+$green: #bfed90;
 $gray: #0E0000;
-$light-gray: #F4F4F4;
+$light-gray: #bbbbbb;
 $purple: #9090ed
