--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -8,10 +8,10 @@
       <label for="tab1">SK8IT</label>
       <div class="tab">
         <div class="row d-flex justify-content-around">
-          <div class="col-4">
-            <%= image_tag "sk8it-demo.gif", class: "sk8it" %>
+          <div class="col-12 col-xs-10 col-sm-8 col-md-6 col-lg-4">
+            <%= image_tag "sk8it-demo.gif", class: "sk8it img-shadow" %>
           </div>
-          <div class="col-6">
+          <div class="col-lg-6 mt-5">
             <h2>SK8IT - Project Manager</h2>
             <p>A project my team and I build in two weeks. Skaters can search for new skate shops, skate parks, or other skate spots that others have found and uploaded. There is also a community aspect where skaters can upload videos so others can watch, comment on, and upvote.</p>
             <p><strong>Notable features:</strong> When uploading a location, the app will generate the address based off of the uploaded photo's geolocational meta-data. When skaters are near the spot, the app will prompt the skater to "check in" to the spot so that other skaters can see who is at the spot.</p>
@@ -21,14 +21,14 @@
       <input type="radio" id="tab2" name="tabs">
       <label for="tab2">AirSocks</label>
       <div class="tab">
-        <div class="row d-flex justify-content-around">
-          <div class="col-6">
-            <%= image_tag "airsocks-demo.gif", class: "airsocks" %>
+        <div class="row d-flex justify-content-center">
+          <div class="col-12">
+            <%= image_tag "airsocks-demo.gif", class: "airsocks img-shadow" %>
           </div>
-          <div class="col-5">
+          <div class="col-10 mt-5">
             <h2>AirSocks - Lead Dev</h2>
             <p>A humorous week-long project sprint meant to be a light take on a marketplace-like web app. User can rent or rent out socks from others. The owners of the sock(s) can then accept or reject pending bookings.</p>
-            <p><strong>Challenges faced:</strong> I was in charge of most of the design for this project. One thing I learned was how it important it is to design with responsiveness in mind. After deploying the app, I realized the layout needed a rehaul. Lesson learned.. I had made it my goal to study much more about responsiveness after that.</p>
+            <p><strong>Challenges faced:</strong> I was in charge of most of the design for this project. One thing I learned was how it important it is to design with responsiveness in mind. After deploying the app, I realized the layout needed a massive rehaul. Lesson learned.. I had made it my goal to study much more about responsiveness after that.</p>
           </div>
         </div>
       </div>
