styled airsocks tab a little more, more responsive

--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -22,7 +22,7 @@
       <label for="tab2">AirSocks</label>
       <div class="tab">
         <div class="row d-flex justify-content-center">
-          <div class="col-12">
+          <div class="col-md-10 col-lg-6">
             <%= image_tag "airsocks-demo.gif", class: "airsocks img-shadow" %>
           </div>
           <div class="col-10 mt-5">
