--- a/source/assets/stylesheets/components/_small_img.scss
+++ b/source/assets/stylesheets/components/_small_img.scss
@@ -14,3 +14,21 @@
   max-width: 500px;
   border-radius: 4px;
 }
+@media(max-width: 768px) {
+ .airsocks {
+   max-height: 228px;
+   max-width: 400px;
+ }
+}
+@media(max-width: 560px) {
+ .airsocks {
+   max-height: 171px;
+   max-width: 300px;
+ }
+}
+@media(max-width: 450px) {
+ .airsocks {
+   max-height: 142px;
+   max-width: 250px;
+ }
+}
