--- a/source/assets/stylesheets/components/_container.scss
+++ b/source/assets/stylesheets/components/_container.scss
@@ -22,7 +22,7 @@
 }
 .contact-container {
   height: auto;
-  background-color: $blue;
+  background-color: $yellow;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
