--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,7 +8,7 @@
     <!-- For Bootstrap responsiveness -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Derek Torres</title>
+    <title>Derek Torres - Fullstack Web Dev</title>
     <!-- Comment this out when meta tags configured -->
     <%#= display_meta_tags %>
     <%= favicon_tag 'favicon.ico' %>
