--- a/source/assets/stylesheets/components/_container.scss
+++ b/source/assets/stylesheets/components/_container.scss
@@ -27,7 +27,10 @@
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  justify-content: center;
   display: flex;
+  align-items: center;
   flex-direction: column;
+}
+.form-container {
+  padding-bottom: 24px;
 }
