--- a/source/assets/stylesheets/components/_index.scss
+++ b/source/assets/stylesheets/components/_index.scss
@@ -3,6 +3,7 @@
 @import "avatar";
 @import "button";
 @import "container";
+@import "form";
 @import "navbar";
 @import "small_img";
 @import "tab";
