--- a/source/partials/contact.html.erb
+++ b/source/partials/contact.html.erb
@@ -1,10 +1,17 @@
 <div id="contact" class="contact-container">
-  <div class="d-flex flex-column align-items-center my-3">
-    <div class="row d-flex justify-content-center">
-      <h1 class="col-10 col-sm-12">Care to chat?</h1>
-    </div>
-    <div class="row d-flex justify-content-center">
-      <p class="col-8">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate nihil quae doloribus laboriosam quasi aspernatur excepturi omnis obcaecati atque ut, quisquam incidunt maiores sapiente eius eligendi velit quia, dolorum error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate nihil quae doloribus laboriosam quasi aspernatur excepturi omnis obcaecati atque ut, quisquam incidunt maiores sapiente eius eligendi velit quia, dolorum error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate nihil quae doloribus laboriosam quasi aspernatur excepturi omnis obcaecati atque ut, quisquam incidunt maiores sapiente eius eligendi velit quia, dolorum error!</p>
-    </div>
+  <h1>Care to chat?</h1>
+  <div class="form-container">
+    <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/moqyyoeb" method="post">
+      <fieldset id="fs-frm-inputs" class="form">
+        <label for="full-name">Full Name</label>
+        <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
+        <label for="email-address">Email Address</label>
+        <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
+        <label for="message">Message</label>
+        <textarea rows="5" name="message" id="message" placeholder="Your Message" required=""></textarea>
+        <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+      </fieldset>
+      <input type="submit" value="Submit" id="submit">
+    </form>
   </div>
 </div>
