--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,6 +5,8 @@
   <%= partial 'partials/about' %>
   <!-- Projects -->
   <%= partial 'partials/projects' %>
+  <!-- Skills -->
+  <%= partial 'partials/skills' %>
   <!-- Contact -->
   <%= partial 'partials/contact' %>
 </div>
