--- a/source/partials/contact.html.erb
+++ b/source/partials/contact.html.erb
@@ -1,5 +1,5 @@
 <div id="contact" class="contact-container">
-  <h1>Care to chat?</h1>
+  <h1 class="mt-3">Care to chat?</h1>
   <div class="form-container">
     <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/moqyyoeb" method="post">
       <fieldset id="fs-frm-inputs" class="form">
