social links added

--- a/source/assets/stylesheets/components/_container.scss
+++ b/source/assets/stylesheets/components/_container.scss
@@ -48,6 +48,11 @@
   align-items: center;
   flex-direction: column;
 }
+.contact-container a{
+  color: black;
+  font-size: 2rem;
+  margin: 8px 16px;
+}
 .form-container {
   padding-bottom: 24px;
 }
