--- a/source/partials/contact.html.erb
+++ b/source/partials/contact.html.erb
@@ -14,4 +14,12 @@
       <input type="submit" value="Submit" id="submit">
     </form>
   </div>
+  <div class="d-flex justify-content-center mx-5">
+    <% link_to "https://www.github.com/deetorz" do %>
+      <i class="fab fa-github"></i>
+    <% end %>
+    <% link_to "https://www.linkedin.com/in/derek-n-torres" do %>
+      <i class="fab fa-linkedin-in"></i>
+    <% end %>
+  </div>
 </div>
