added links on projects

--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -1,4 +1,4 @@
-<div id="projects" class="container">
+<div id="projects" class="container projects-container">
   <div class="d-flex flex-column align-items-center my-3">
     <div class="row d-flex justify-content-center">
       <h1 class="col-10 col-sm-12">What I've been up to...</h1>
@@ -15,6 +15,12 @@
             <h2>SK8IT - Project Manager</h2>
             <p>A project my team and I build in two weeks. Skaters can search for new skate shops, skate parks, or other skate spots that others have found and uploaded. There is also a community aspect where skaters can upload videos so others can watch, comment on, and upvote.</p>
             <p><strong>Notable features:</strong> When uploading a location, the app will generate the address based off of the uploaded photo's geolocational meta-data. When skaters are near the spot, the app will prompt the skater to "check in" to the spot so that other skaters can see who is at the spot.</p>
+            <% link_to "https://www.github.com/anthonytjohnson/sk8it", target: :_blank do %>
+              <i class="fas fa-code"></i>
+            <% end %>
+            <% link_to "https://www.sk8it.me", target: :_blank do %>
+              <i class="fas fa-desktop"></i>
+            <% end %>
           </div>
         </div>
       </div>
@@ -29,6 +35,12 @@
             <h2>AirSocks - Lead Dev</h2>
             <p>A humorous week-long project sprint meant to be a light take on a marketplace-like web app. User can rent or rent out socks from others. The owners of the sock(s) can then accept or reject pending bookings.</p>
             <p><strong>Challenges faced:</strong> I was in charge of most of the design for this project. One thing I learned was how it important it is to design with responsiveness in mind. After deploying the app, I realized the layout needed a massive rehaul. Lesson learned.. I had made it my goal to study much more about responsiveness after that.</p>
+            <% link_to "https://github.com/deetorz/AirSocks", target: :_blank do %>
+              <i class="fas fa-code"></i>
+            <% end %>
+            <% link_to "https://airsocks.herokuapp.com/", target: :_blank do %>
+              <i class="fas fa-desktop"></i>
+            <% end %>
           </div>
         </div>
       </div>
