--- a/source/assets/stylesheets/components/_container.scss
+++ b/source/assets/stylesheets/components/_container.scss
@@ -20,6 +20,11 @@
   display: flex;
   flex-direction: column;
 }
+.projects-container a{
+  color: black;
+  font-size: 2rem;
+  margin: 8px 16px;
+}
 .skills-container {
   height: auto;
   width: 100%;
