--- a/source/partials/contact.html.erb
+++ b/source/partials/contact.html.erb
@@ -15,11 +15,16 @@
     </form>
   </div>
   <div class="d-flex justify-content-center mx-5">
-    <% link_to "https://www.github.com/deetorz" do %>
+    <% link_to "https://www.github.com/deetorz", target: :_blank do %>
       <i class="fab fa-github"></i>
     <% end %>
-    <% link_to "https://www.linkedin.com/in/derek-n-torres" do %>
+    <% link_to "https://www.linkedin.com/in/derek-n-torres", target: :_blank do %>
       <i class="fab fa-linkedin-in"></i>
+    <% end %>
+  </div>
+  <div class="d-flex justify-content-center mx-5">
+    <% link_to "/#" do %>
+      <i class="fas fa-chevron-up"></i>
     <% end %>
   </div>
 </div>
