--- a/source/assets/stylesheets/components/_container.scss
+++ b/source/assets/stylesheets/components/_container.scss
@@ -24,6 +24,9 @@
   color: black;
   font-size: 2rem;
   margin: 8px 16px;
+  &:hover {
+    color: $blue;
+  }
 }
 .skills-container {
   height: auto;
@@ -57,6 +60,9 @@
   color: black;
   font-size: 2rem;
   margin: 8px 16px;
+  &:hover {
+    color: $blue;
+  }
 }
 .form-container {
   padding-bottom: 24px;
