changed the yellow on skills

--- a/source/assets/stylesheets/config/_colors.scss
+++ b/source/assets/stylesheets/config/_colors.scss
@@ -3,7 +3,7 @@
 // For example:
 $red: #e76161;
 $blue: #90eded;
-$yellow: #eded90;
+$yellow: #FFF9C4;
 $orange: #edbf90;
 $green: #bfed90;
 $gray: #0E0000;
