--- a/source/assets/stylesheets/components/_tab.scss
+++ b/source/assets/stylesheets/components/_tab.scss
@@ -18,6 +18,9 @@
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   color: rgb(128, 128, 128);
+  &:hover {
+    cursor: pointer;
+  }
 }
 .tabs .tab {
   width: 100%;
