fixed some typos

--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -33,8 +33,8 @@
           </div>
           <div class="col-10 mt-5">
             <h2>AirSocks - Lead Dev</h2>
-            <p>A humorous week-long project sprint meant to be a light take on a marketplace-like web app. User can rent or rent out socks from others. The owners of the sock(s) can then accept or reject pending bookings.</p>
-            <p><strong>Challenges faced:</strong> I was in charge of most of the design for this project. One thing I learned was how it important it is to design with responsiveness in mind. After deploying the app, I realized the layout needed a massive rehaul. Lesson learned.. I had made it my goal to study much more about responsiveness after that.</p>
+            <p>A humorous week-long project sprint meant to be a light take on a marketplace-like web app. Users can rent or rent out socks from others. The owners of the sock(s) can then accept or reject pending bookings.</p>
+            <p><strong>Challenges faced:</strong> I was in charge of most of the design for this project. One thing I learned was how it important it is to design with responsiveness in mind. After deploying the app, I realized the layout needed a massive rehaul. Lesson learned.. I had made it my goal to study much more about responsive design after that.</p>
             <% link_to "https://github.com/deetorz/AirSocks", target: :_blank do %>
               <i class="fas fa-code"></i>
             <% end %>
