--- a/source/assets/stylesheets/components/_container.scss
+++ b/source/assets/stylesheets/components/_container.scss
@@ -1,5 +1,5 @@
 .hero-container {
-  height: 80vh;
+  height: 100vh;
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
@@ -11,7 +11,7 @@
 }
 .about-container {
   height: auto;
-  background-color: $orange;
+  background-color: rgb(243, 166, 166);
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -31,7 +31,7 @@
 .skills-container {
   height: auto;
   width: 100%;
-  background-color: $yellow;
+  background-color: rgb(243, 166, 166);
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
