made new color variable

--- a/source/assets/stylesheets/components/_container.scss
+++ b/source/assets/stylesheets/components/_container.scss
@@ -11,7 +11,7 @@
 }
 .about-container {
   height: auto;
-  background-color: rgb(243, 166, 166);
+  background-color: $pink;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -31,7 +31,7 @@
 .skills-container {
   height: auto;
   width: 100%;
-  background-color: rgb(243, 166, 166);
+  background-color: $pink;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
