--- a/source/assets/stylesheets/config/_colors.scss
+++ b/source/assets/stylesheets/config/_colors.scss
@@ -8,4 +8,5 @@ $orange: #edbf90;
 $green: #bfed90;
 $gray: #0E0000;
 $light-gray: #bbbbbb;
-$purple: #9090ed
+$purple: #9090ed;
+$pink: rgb(243, 166, 166)
